# corrupt_mnist

./: .gitignore  README.md  pyproject.toml  requirements.txt  tasks.py
configs/: config.yaml
configs/callbacks/: default_callbacks.yaml
configs/data_module/: corrupt_mnist.yaml  default_data_module.yaml
configs/logger/: wandb_logger.yaml
configs/model/: default_model.yaml  my_lightning_model.yaml
configs/trainer/: default_trainer.yaml
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
notebooks/: tests.ipynb
src/corrupt_mnist/: train.py
src/corrupt_mnist/data/: corrupt_mnist_datamodule.py
src/corrupt_mnist/models/: corrupt_mnist_module.py  models.py
